@@ -295,6 +295,7 @@
      <addaction name="actionCountInFile"/>
     </widget>
     <addaction name="actionFind"/>
+    <addaction name="actionHideFind"/>
     <addaction name="separator"/>
     <addaction name="actionFindNext"/>
     <addaction name="actionFindPrevious"/>
@@ -1583,6 +1584,16 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+F</string>
+   </property>
+  </action>
+  <action name="actionHideFind">
+   <property name="text">
+    <string>&amp;Hide Find &amp;&amp; Replace...</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;p style=&quot;padding-top: 0.5em;&quot; &gt;&lt;b&gt;Find &amp;amp; Replace&lt;/b&gt;&lt;/p&gt;
+
+&lt;p style=&quot;margin-left: 0.5em;&quot;&gt;Hide the Find and Replace Window.&lt;/p&gt;</string>
    </property>
   </action>
   <action name="actionIncreaseIndent">
